Adding cssText case

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -11,7 +11,8 @@
         <span>Latest result</span>
         <time id="latestResultValue">0.0</time>
     </header>
-    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,setAttributeValue,setThenRemoveAttribute,focus"
+    <article id="testCases" 
+        data-sections="addClass,addThenRemoveClass,setId,setThenClearId,setAttributeValue,setThenRemoveAttribute,focus,setCssTextSame"
         data-buttons="noAuthorRule,containerAuthorRule,rowAuthorRule,columnAuthorRule,cellAuthorRule">
     </article>
 
