--- a/manualDriver.html
+++ b/manualDriver.html
@@ -8,6 +8,7 @@
 
 <body>
     <header id="results">
+        <button>MOAB</button>
         <span>Latest result</span>
         <time id="latestResultValue">0.0</time>
     </header>
