Adding :focus::pseudo test case

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -17,7 +17,7 @@
         </section>
         <table id="detailedRunAllResults"></table>
     </header>
-    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,setAttributeValue,setThenRemoveAttribute,focus,setCssTextSame,setTransformThenGetTransformOrigin"
+    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,setAttributeValue,setThenRemoveAttribute,focus,pseudoElementFocus,setCssTextSame,setTransformThenGetTransformOrigin"
         data-buttons="noAuthorRule,containerAuthorRule,rowAuthorRule,columnAuthorRule,cellAuthorRule">
     </article>
 
