Add an options to avoid forced cascade

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -11,6 +11,8 @@
         <h1 id="generationsLabel">Generations:</h1>
         <span id="generationsControls"></span>
         <button id="runAll">Run all cases for selected generation(s)</button>
+        <input type="checkbox" id="addForcedCascade">
+        <label for="addForcedCascade">Add forced cascade</label>
         <section id="latestResult">
             <h1>Latest result</h1>
             <time id="latestResultValue">0.0</time>
