--- a/manualDriver.html
+++ b/manualDriver.html
@@ -19,7 +19,7 @@
         </section>
         <table id="detailedRunAllResults"></table>
     </header>
-    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,setAttributeValue,setThenRemoveAttribute,focus,pseudoElementFocus,setCssTextSame,setTransformThenGetTransformOrigin"
+    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,focus,pseudoElementFocus,setAttributeValue,setThenRemoveAttribute,setCssTextSame,setTransformThenGetTransformOrigin"
         data-buttons="noAuthorRule,containerAuthorRule,rowAuthorRule,columnAuthorRule,cellAuthorRule">
     </article>
 
