Several quality of life fixes - add focus holder and use that to transition focus during cleanup, so that focus tests are not affected by existing focus on the element - spearate class change from actually setting focus in focus tests - change modified property from outline to background

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -8,10 +8,11 @@
 
 <body>
     <header id="results">
+        <input type="text" id="focusReceiver" />
         <h1 id="generationsLabel">Generations:</h1>
         <span id="generationsControls"></span>
         <button id="runAll">Run all cases for selected generation(s)</button>
-        <input type="checkbox" id="addForcedCascade">
+        <input type="checkbox" checked="checked" id="addForcedCascade">
         <label for="addForcedCascade">Add forced cascade</label>
         <section id="latestResult">
             <h1>Latest result</h1>
