We can now use recently introduced setupActions infrastructure to do removal,clearing properly without double counting - this change does so for class, id, attribute changes

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -20,7 +20,7 @@
         </section>
         <table id="detailedRunAllResults"></table>
     </header>
-    <article id="testCases" data-sections="addClass,addThenRemoveClass,setId,setThenClearId,focus,pseudoElementFocus,setAttributeValue,setThenRemoveAttribute,setCssTextSame,setTransformThenGetTransformOrigin"
+    <article id="testCases" data-sections="addClass,removeClass,setId,clearId,focus,pseudoElementFocus,setAttributeValue,removeAttribute,setCssTextSame,setTransformThenGetTransformOrigin"
         data-buttons="noAuthorRule,containerAuthorRule,rowAuthorRule,columnAuthorRule,cellAuthorRule">
     </article>
 
