--- a/manualDriver.html
+++ b/manualDriver.html
@@ -22,15 +22,21 @@
         <span id="generationsControls"></span>
         <button id="runAll">Run all cases for selected generation(s)</button>
         <input type="text" id="focusReceiver" />
+        <section id="latestTest">
+            <h1>Latest test</h1>
+            <span id="latestTestValue">Please run any or all test(s)</span>
+        </section>
         <section id="latestResult">
             <h1>Latest result</h1>
             <time id="latestResultValue">0.0</time>
         </section>
         <table id="detailedRunAllResults"></table>
     </header>
-    <article id="testCases" data-sections="addClass,removeClass,setId,clearId,focus,pseudoElementFocus,setAttributeValue,removeAttribute,setCssTextSame,setTransformThenGetTransformOrigin"
+    <details id="manualControls" data-sections="addClass,removeClass,setId,clearId,focus,pseudoElementFocus,setAttributeValue,removeAttribute,setCssTextSame,setTransformThenGetTransformOrigin"
         data-buttons="noAuthorRule,containerAuthorRule,rowAuthorRule,columnAuthorRule,cellAuthorRule">
-    </article>
+        <summary>Manual controls</summary>
+        <article id="manualControlsContainer"></article>
+    </details>
 
     <div id="container" tabindex="0"></div>
     <script src="support/Formatting/script.js"></script>
@@ -38,14 +44,12 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            let consistencyReport = checkBasicConsistency();
-            if (consistencyReport) {
-                alert(consistencyReport);
-            } else {
-                createInitialStructure(50, 50, 50);
-                createTestCasesControlPanel();
-                createGenerationsControls([1, 2, 3]); // only run generation 1,2 tests by default
-                addButtonsEventListeners();
+            let consistencyReport = checkConsistency();
+            if (consistencyReport) alert(consistencyReport);
+            else {
+                createInitialStructure({ rows: 50, columns: 50, cells: 50 });
+                createManualControls({ addEventListeners: true });
+                createGenerationsControls({ selectGenerations: [1, 2, 3] });
             }
         });
     </script>
