Visual and naming tweaks

--- a/manualDriver.html
+++ b/manualDriver.html
@@ -20,7 +20,7 @@
     <header id="results">
         <h1 id="generationsLabel">Generations</h1>
         <span id="generationsControls"></span>
-        <button id="runAll">Run all cases for selected generation(s)</button>
+        <button id="runAll">Run all selected</button>
         <input type="text" id="focusReceiver" />
         <section id="latestTest">
             <h1>Latest test</h1>
